get filtered scheduled tasks
